# lm-sensors-web

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  build.rs  build_dashboard.py  config.example.json  docker-compose.yml
.github/: CODEOWNERS
.github/workflows/: release.yaml  test.yaml
.pi/: choice.json
docs/: API_REFERENCE.md  DEPLOYMENT.md  TESTING.md  TROUBLESHOOTING.md  USER_GUIDE.md
examples/: sensor-monitor.rs
src/: cli.rs  config.rs  lib.rs  main.rs  sensors.rs  server.rs  service.rs  state.rs  webhook.rs  websocket.rs
src/api/: health.rs  mod.rs  sensors.rs  version.rs
static/: app.css  app.js  bundled.html  index.html
tests/: api_endpoints.rs  api_test.rs  cli_integration.rs  config_integration.rs  sensor_data.rs  version_endpoint.rs  webhook_engine.rs  webhook_test.rs  websocket_integration.rs  ws_test.rs
