[package]
name = "lm-sensors-web"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lm-sensors-web"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lm-sensors = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tower-http = { version = "0.6", features = ["cors", "fs", "limit"] }
dirs = "6"
tempfile = "3"
tokio-util = { version = "0.7", features = ["rt"] }
