[package]
name = "lm-sensors-web"
version = "0.2.0"
edition = "2024"
description = "Hardware sensor monitoring web application — exposes Linux libsensors data via REST API, WebSocket live-feed, webhooks, and a dark-mode dashboard"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/dipenpradhan/lm-sensors-web"
homepage = "https://github.com/dipenpradhan/lm-sensors-web"
categories = ["hardware-support", "web-programming::http-server"]
keywords = ["sensors", "lm-sensors", "hardware", "monitoring", "dashboard"]

[lib]
name = "lm_sensors_web"
path = "src/lib.rs"

[[bin]]
name = "lm-sensors-web"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lm-sensors = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tower-http = { version = "0.6", features = ["cors", "fs", "limit"] }
dirs = "6"
tempfile = "3"
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
minifier = "0.3.6"
